# TrackCarbon-core

./: .gitignore  CONTRIBUTING.md  README.md  dev_notebook.ipynb  development_notebook.ipynb  pyproject.toml
data/: carbon_intensity_data_mock.csv
src/: constants.py  utils.py
src/domain/models/: area_mix.py  carbon_emissions_per_domain_alias.py  domain_alias.py  energy_consumption_per_domain_alias.py  energy_estimators.py  event.py  granularity.py  model_alias.py
src/domain/models/event_metadata/: __init__.py  ai.py  base.py
src/domain/ports/: carbon_intensity_repository.py  energy_estimator.py  energy_to_carbon_convertor.py
src/infrastructure/adapters/: fake_events.py  on_disk_carbon_intensity_repository.py
src/infrastructure/adapters/estimation/carbon/: electricity_maps_based_convertor.py  my_convertor.py
src/infrastructure/adapters/estimation/energy/: config_loader.py
src/infrastructure/configs/models/: claude-sonnet-4.yaml  gpt-4o.yaml  gpt-5.yaml  mistral-large-2411.yaml
src/infrastructure/estimation/energy/: my_estimator.py  nidhal.py
