[project]
name = "trackarbon-core"
version = "0.1.0"
description = "This project exposes the methods used in TrackCarbon app to monitor CO2 usage."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2025.12.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
